/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application

    id("com.diffplug.spotless") version "8.1.0"
    id("org.danilopianini.gradle-java-qa") version "1.159.0"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // This dependency is used by the application.
    implementation(libs.guava)

     // Gson for JSON parsing
    implementation("com.google.code.gson:gson:2.10.1")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = "it.unibo.scotyard.ScotlandYard"
}

spotless {
    java {
        importOrder()

        removeUnusedImports()
        forbidModuleImports()

        cleanthat()
            .addMutator("SafeAndConsensual")
            .addMutator("SafeButNotConsensual")
            .includeDraft(true)

        palantirJavaFormat().formatJavadoc(false)
        formatAnnotations()

        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
